2012-06-29
KEGGprofile 0.99.1: Add the param lwd when type='lines' 

2012-06-28
KEGGprofile 0.99.0: Improvement in the description of this package. Add notes for users in plot_profile function

2012-05-12
KEGGprofile 0.1.2: Improvement in the codes of vignette file and re-submit to bioconductor as the final version

2012-03-22
KEGGprofile 0.1.0: Submit to bioconductor

2012-03-21
KEGGprofile 0.0.7: Finish the vignette file

2012-03-20
KEGGprofile 0.0.6: Improvement in help file and example source

2012-03-08
KEGGprofile 0.0.5: Add return value for plot_pathway function; Release to my colleague

2012-03-04
KEGGprofile 0.0.4: Finish help files and example source

2012-03-03
KEGGprofile 0.0.3: Add example data files

2012-02-29
KEGGprofile 0.0.2: Improvement in figure details

2012-02-26
KEGGprofile 0.0.1: Build 'KEGGprofile' package by CMD Install and CMD check