@@ -1,3 +1,6 @@
+2012-09-19
+KEGGprofile 0.99.2: Improvement in processing expression matrix with only one time point
+
 2012-06-29
 KEGGprofile 0.99.1: Add the param lwd when type='lines' 
 
